<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Information Strings -->
    <string name="app_name">Kerbal Transfer Calculator</string>
    <string name="action_settings">Settings</string>

    <!-- Home Screen Strings -->
    <string name="start_button">Start Calculator</string>
    <string name="news_button">Latest Blog Post</string>
    <string name="wiki_button">Visit the Wiki</string>
    <string name="app_description">This app will calculate the parameters of the burn needed to transfer between
        the two indicated bodies in KSP. This app assumes that body you are orbiting is a planet; it will not perform the
        transfer between one of the moons and another body.</string>

    <!-- Orbit Information Screen Strings -->
    <string name="title_activity_orbit_info_screen">Orbit Information</string>
    <string name="start_description">Current Planet</string>
    <string name="target_description">Target Planet</string>
    <string name="assumption">This calculator assumes that your current and target orbits are circular</string>
    <string name="orb_unit">km</string>
    <string name="orb_hint">Enter Orbit Altitude</string>
    <string name="hint">enter a number</string>
    <string name="date_instr">Enter the in game date found at the tracking station</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="submit_text">Submit</string>

    <string-array name="initial_planet_array">
        <item>Kerbin</item>
        <item>Moho</item>
        <item>Eve</item>
        <item>Duna</item>
        <item>Dres</item>
        <item>Jool</item>
        <item>Eeloo</item>
    </string-array>
    <string-array name="target_planet_array">
        <item>Duna</item>
        <item>Moho</item>
        <item>Eve</item>
        <item>Kerbin</item>
        <item>Dres</item>
        <item>Jool</item>
        <item>Eeloo</item>
    </string-array>
    
    <!-- Input validation error messages -->
    <string name="cur_orb_err">Please enter the current orbital radius</string>
    <string name="tar_orb_err">Please enter the target orbital radius</string>
    <string name="year_err">Please enter the current year</string>
    <string name="doy_err">Please enter the current day of year</string>

    <!-- Transfer Calculation strings -->
    <string name="title_activity_calculate_transfer">CalculateTransfer</string>
    <string name="planet_msg">The transfer parameters to go from: </string>
    <string name="dv_esc"></string>

</resources>
