<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/app_description" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:onClick="startCalc" />
    
    <Button
        android:id="@+id/blog_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/news_button" 
        android:onClick="gotoBlog"/>
    <Button
        android:id="@+id/wiki_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/wiki_button"
        android:onClick="gotoWiki"/>

</LinearLayout>
