<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OrbitInfoScreen" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assumption" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
        <Spinner
        	android:id="@+id/current_planet"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content" />
        
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textStyle="bold"
        	android:paddingLeft="@dimen/orb_info_horizontal_margin"
        	android:text="@string/start_description"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <EditText 
        	android:id="@+id/start_orbit_radius"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/hint"
        	android:inputType="number"
        	android:gravity="right" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orb_hint" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Spinner 
        	android:id="@+id/target_planet"
        	android:layout_width="0dp"
        	android:layout_weight="1"
        	android:layout_height="wrap_content"/>
    
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:paddingLeft="@dimen/orb_info_horizontal_margin"
        	android:textStyle="bold"
        	android:text="@string/target_description"/>    
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        <EditText 
        	android:id="@+id/end_orbit_radius"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/hint"
        	android:gravity="right"
        	android:inputType="number" />
    
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/orb_hint" />      
	</LinearLayout>
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/date_instr"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText 
            android:id="@+id/cur_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint"
            android:gravity="left"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"/>
        <EditText
            android:id="@+id/cur_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint"
            android:gravity="right"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        android:onClick="submitData"/>
              
 </LinearLayout>
